@@ -29,6 +29,7 @@ Changes from 4.0b1 to 4.0
     imported everything in the __all__ variable during initialization.
 15) Modified license text to more closely match the Python Software Foundation
     license as was intended.
+16) Added sample script for freezing an application using matplotlib.
 
 Changes from 3.0.3 to 4.0b1
  1) Added support for placing modules in library.zip or in a separate zip file
